# tinyrobotics

./: .clang-tidy  .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  test_joint_set.json  tinyroboticsConfig.cmake  tinyrobotics_config.cmake
data/urdfs/: 2_link.urdf  2_link_upright.urdf  2_link_with_fixed.urdf  3_link.urdf  4_link.urdf  5_link.urdf  cart_pole.urdf  kuka.urdf  nugus.urdf  onshape.urdf  panda_arm.urdf  robot.urdf  simple.urdf  test_compass_gait_floating_hip.urdf
docs/: Data_8hpp.html  Data_8hpp.js  Data_8hpp_source.html  Dynamics_8hpp.html  Dynamics_8hpp.js  Dynamics_8hpp_source.html  InverseKinematics_8hpp.html  InverseKinematics_8hpp.js  InverseKinematics_8hpp_source.html  Joint_8hpp.html  Joint_8hpp.js  Joint_8hpp_source.html  Kinematics_8hpp.html  Kinematics_8hpp.js  Kinematics_8hpp_source.html  Link_8hpp.html  Link_8hpp.js  Link_8hpp_source.html  Math_8hpp.html  Math_8hpp.js  Math_8hpp_source.html  Model_8hpp.html  Model_8hpp.js  Model_8hpp_source.html  Parser_8hpp.html  Parser_8hpp.js  Parser_8hpp_source.html  Solver_8hpp.html  Solver_8hpp.js  Solver_8hpp_source.html  annotated.html  annotated_dup.js  bug.html  classMyLibrary_1_1Example-members.html  classMyLibrary_1_1Example.html  classMyLibrary_1_1Example.js  classMyLibrary_1_1SubclassExample-members.html  classMyLibrary_1_1SubclassExample.html  classes.html  classtr_1_1IKConstraint-members.html  (+156 more)
docs/html/: Dynamics_8hpp_source.html  Parser_8hpp_source.html  Solver_8hpp_source.html  classtr_1_1IKCost.html  dir_13e138d54eb8818da29c3992edef070a.html  dir_63772b626f2709090f0bdca0f40827b4.html  dir_d28a4824dc47e487b107a5db32ef43c4.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_ee532ceb613f48f23d20ef02624c3a91.html  files.html  functions_vars.html  index.html  md_README.html  menudata.js  pages.html  structtr_1_1Data.html  structtr_1_1Link-members.html  structtr_1_1Model-members.html  structtr_1_1SolverParams.html  structtr_1_1SolverResults-members.html
docs/html/search/: all_2.js  all_3.js  all_5.js  all_6.js  all_8.js  all_c.js  classes_0.js  classes_1.js  classes_3.js  functions_0.js  functions_4.js  functions_6.js  functions_7.js  pages_0.js  variables_0.js  variables_1.js  variables_2.js  variables_5.js  variables_6.js  variables_8.js  variables_9.js  variables_f.js
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  (+55 more)
examples/: benchmark.cpp  benchmark_example.cpp  benchmark_ik_example.cpp  dynamics.cpp  dynamics_example.cpp  forward_kinematics.cpp  inverse_kinematics.cpp  inversekinematics_example.cpp  kinematics_example.cpp  main.cpp
include/: Common.hpp  Data.hpp  Dynamics.hpp  ForwardKinematics.hpp  InverseKinematics.hpp  Joint.hpp  Kinematics.hpp  Link.hpp  Math.hpp  Model.hpp  Parser.hpp  Solver.hpp  UrdfParser.hpp  data.hpp  dynamics.hpp  dynamics.hxx  fmin.hpp  inversekinematics.hpp  inversekinematics.hxx  joint.hpp  kinematics.hpp  kinematics.hxx  link.hpp  math.hpp  model.hpp  parser.hpp
src/: Common.hpp  Dynamics.hpp  ForwardKinematics.hpp  InverseKinematics.hpp  Joint.hpp  Link.hpp  Model.hpp  RobotModel.hpp  main.cpp  matplotlibcpp.cpp  matplotlibcpp.hpp  tinyxml.cpp  tinyxmlerror.cpp  tinyxmlparser.cpp
test/: TestDynamics.cpp  TestKinematics.cpp  TestMath.cpp  TestModel.cpp  TestSolver.cpp  dynamics_test.cpp  fmin_test.cpp  inversekinematics_test.cpp  kinematics_test.cpp  math_test.cpp  model_test.cpp
test/src/: TestDynamics.cpp  TestKinematics.cpp  TestMath.cpp  TestModel.cpp  TestRobotModel.cpp  TestSolver.cpp
